--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 html::-webkit-scrollbar {
   width: 5px;
@@ -207,8 +208,6 @@ select {
   height: 45px;
 }
 
-/* Css Drop zone */
-
 .dropzone {
   text-align: center;
   padding: 20px;
@@ -231,7 +230,6 @@ select {
   text-align: center;
 }
 
-/* Css vraperi stranica */
 .mka__wrapper {
   background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
   background-repeat: repeat;
@@ -296,8 +294,6 @@ select {
   min-height: 55rem;
 }
 
-/*Css dropdowna za sortiranje */
-
 .sorting-select {
   position: relative;
   display: inline-block;
@@ -336,76 +332,9 @@ option {
   left: 2%;
   top: 35%;
 }
-
-/* Pogledati sta overidujem i dokumentovati*/
 .css-qc6sy-singleValue {
   color: #949799 !important;
 }
-
-/*Css slajdera na stranici ponuda auta - Provjeriti zasto mijenja velicinu
-raila kada promijenim lokaciju css-a
-
-.rc-slider {
-  position: relative;
-  height: 16px;
-  padding: 5px 0;
-  width: 100%;
-  border-radius: 6px;
-  touch-action: none;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: var(--color-red) !important;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-}
-
-.rc-slider * {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: var(--color-red) !important;
-}
-
-.rc-slider-rail {
-  position: absolute;
-  width: 100%;
-  background-color: #f50c0c !important;
-  height: 6px !important;
-  border-radius: 6px;
-}
-
-.rc-slider-track {
-  position: absolute;
-  height: 100%;
-  border-radius: 6px;
-  background-color: var(--color-red) !important;
-  opacity: 100% !important;
-}
-
-.rc-slider-handle {
-  opacity: 1 !important;
-  position: absolute;
-  width: 18px !important;
-  height: 18px !important;
-  cursor: pointer;
-  cursor: -webkit-grab;
-  cursor: grab;
-  border-radius: 0% !important;
-  background-color: white !important;
-  touch-action: pan-x;
-  border: solid 1px var(--color-red) !important
-}
-
-.rc-slider-handle-1 {
-  transform: translateX(0) !important;
-
-}
-
-.rc-slider-handle-2 {
-  transform: translateX(-100%) !important;
-
-}
-*/
-
-/* Css home image slajdera */
 
 .mka__home-slider {
   aspect-ratio: 0 !important;
