--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -37,6 +37,10 @@
 .mka__list-of-cars {
   grid-area: main;
   max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  column-gap: 30px;
+  row-gap: 30px;
 }
 
 .mka__content-car-offers__main-grid {
@@ -136,13 +140,6 @@
   margin: 350px 0;
 }
 
-.mka__cars-grid {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  column-gap: 30px;
-  row-gap: 30px;
-}
-
 .mka__cars-flex {
   display: flex;
   flex-direction: column;
@@ -170,13 +167,13 @@
 }
 
 @media (max-width: 765px) {
-  .mka__cars-grid {
+  .mka__list-of-cars {
     grid-template-columns: auto auto;
   }
 }
 
 @media (max-width: 480px) {
-  .mka__cars-grid {
+  .mka__list-of-cars {
     grid-template-columns: auto;
   }
 }
@@ -201,6 +198,12 @@
   .mka__content-car-offers {
     width: 100%;
     float: left;
+  }
+
+  .mka__cars-and-pagination_to-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
