--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ html::-webkit-scrollbar-track {
   position: relative;
   z-index: 1;
   height: 470px;
-  background-image: url(http://mkautomobile.at/wp-content/uploads/2021/04/dark-min.jpg?id=492);
+  background-image: url(C:\Users\pk\Desktop\Dokumenti\Programiranje\MKautomobile\src\assets\dark-min.jpg);
   background-size: auto;
   background-repeat: no-repeat;
 }
