--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -62,13 +62,13 @@
 
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-  left: -15px !important;
+  left: 0;
   right: auto;
 }
 
 .swiper-button-next,
 .swiper-container-rtl .swiper-button-prev {
-  right: -15px !important;
+  right: 0;
   left: auto;
 }
 
