--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -24,6 +24,7 @@
   flex-wrap: wrap;
   margin-top: 40px;
   margin-bottom: 40px;
+  padding: 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -153,7 +154,7 @@
 }
 
 .mka__loading-svg-positioning {
-  margin: 350px 0;
+  margin: 350px 200px;
 }
 
 .mka__cars-flex {
