--- a/src/components/CarPage/CarPage.css
+++ b/src/components/CarPage/CarPage.css
@@ -134,6 +134,7 @@
     min-width: 0;
     width: 100%;
     height: 20rem;
+    position: relative;
 }
 
 .mka__gallery-carpage .swiper {
@@ -145,15 +146,13 @@
 }
 
 .mka__productPageSwiper .swiper-button-next {
-    position: fixed;
-    top: 45%;
-    right: 50%;
+    top: 50%;
+    right: 0;
 }
 
 .mka__productPageSwiper .swiper-button-prev {
-    position: fixed;
-    left: 19%;
-    top: 45%;
+    left: 0;
+    top: 50%;
 }
 
 
