--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,6 +56,10 @@
   top: 9rem;
 }
 
+.mka__search_column a {
+  position: relative;
+}
+
 .mka__search_column a i {
   color: #fff;
 }
@@ -66,7 +70,7 @@
 
 .mka__search_column {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   max-width: 30px;
 }
 
@@ -99,6 +103,156 @@
 .fa-search:hover {
   transition: 0.5s;
   color: #db2d2e;
+}
+
+.fa-exchange {
+  color: #fff;
+  width: 21px;
+  height: 21px;
+  margin-top: 20px;
+  padding-right: 5px;
+}
+
+.fa-exchange:hover {
+  transition: 0.5s;
+  color: #db2d2e;
+}
+
+.fa-exchange-array_empty {
+  display: none;
+}
+
+.ai-close {
+  color: #db2d2e;
+  min-width: 20px;
+  min-height: 20px;
+  cursor: pointer;
+}
+
+.io-close-table {
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  margin-top: 20px;
+  padding-right: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+.mka__array-length_circle {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  top: 15px;
+  right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.table {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+}
+
+th {
+  border: 1px solid red;
+  padding: 30px;
+  color: white;
+  font-family: var(--font-family);
+}
+
+td {
+  border: 1px solid red;
+  padding: 10px;
+  color: white;
+  font-family: var(--font-family);
+  height: 50px;
+  vertical-align: middle;
+}
+
+tr th {
+  text-align: center;
+  font-size: 23px;
+}
+
+tr {
+  height: 8px;
+}
+
+tbody > tr, td {
+  width: 300px;
+  padding: 10px;
+  text-align: right;
+}
+
+#mka__price-and--image {
+  height: 12rem;
+}
+
+#mka__price-and--image img {
+  max-height: 150px;
+  max-width: 150px;
+}
+
+#mka__price-and--image p {
+  margin-top: 10px;
+}
+
+#mka__delete-car--row {
+  border-top: none;
+}
+
+.mka__table-body {
+  display: flex;
+  min-width: 100%;
+}
+
+.mka__place-for-cars_table {
+  width: 100%;
+  display: contents;
+}
+
+.mka__place-for-cars_table .mka__place-for-car_table {
+  width: 17%;
+}
+
+.mka__place-for-car_table td {
+  border-left: none;
+  text-align: center;
+}
+
+.mka__table-headline {
+  padding: 20px 0;
+  border-bottom: 1px solid red;
+  min-width: 100%;
+  text-align: center;
+}
+
+.mka__array-length_circle p {
+  color: white;
+  font-family: var(--font-family);
+  font-style: normal;
+  font-size: 12px;
 }
 
 .mka__navbar-menu_container-links {
