--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@ html::-webkit-scrollbar-track {
   z-index: 1;
   height: 470px;
   background-image: url('./assets/dark-min.jpg');
-  background-size: auto;
   background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .page-container {
@@ -208,28 +208,6 @@ select {
   height: 45px;
 }
 
-.dropzone {
-  text-align: center;
-  padding: 20px;
-  border: 1px dashed #eeeeee;
-  background-color: transparent;
-  color: #bdbdbd;
-  margin-bottom: 20px;
-}
-
-.accept {
-  border-color: #107c10 !important;
-}
-
-.reject {
-  border-color: #d83b01 !important;
-}
-
-#text {
-  color: var(--color-grey);
-  text-align: center;
-}
-
 .mka__wrapper {
   background-image: url('./assets/dark.jpg');
   background-repeat: repeat;
@@ -332,6 +310,7 @@ option {
   left: 2%;
   top: 35%;
 }
+
 .css-qc6sy-singleValue {
   color: #949799 !important;
 }
@@ -342,6 +321,12 @@ option {
   margin-right: auto;
   width: 100%;
   overflow: visible;
+}
+
+.mka__loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 767px) {
