--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -19,19 +19,7 @@
   font-family: 'Rubik', sans-serif;
 }
 
-.swiper-button-prev {
-  position: fixed;
-  top: 45%;
-  width: 44px !important;
-  height: 44px !important;
-  background-color: #fff;
-  transition: 300ms ease-out;
-  opacity: 0;
-  transform: translate(0, 0) !important;
-  outline: 0;
-  transition: background-color 0.2s ease, color 0.2s ease;
-}
-
+.swiper-button-prev,
 .swiper-button-next {
   position: fixed;
   top: 45%;
@@ -86,4 +74,13 @@
 .mka__img-slider-size>img {
   width: 100%;
   display: block;
+}
+
+@media (max-width: 1280px) {
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none !important;
+  }
+
 }
